--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@firecamp/curl-to-firecamp",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "Transform curl request to Firecamp request.",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
+  "_module": "build/module/index.js",
   "repository": "https://github.com/Nishchit14/curl-to-firecamp",
   "license": "MIT",
   "keywords": [],
   "scripts": {
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
+    "_build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
