--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.17.1",
+    "@firecamp/utility": "^0.1.115",
+    "nano-id": "^1.1.0",
     "parse-curl": "https://github.com/firecamp-forks/parse-curl.js.git"
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^23.0.24",
+    "@types/node": "^16.4.3",
+    "@types/url-parse": "1.4.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "codecov": "^3.5.0",
@@ -60,12 +63,13 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.5.2",
     "gh-pages": "^3.1.0",
-    "jest": "^27.0.6",
+    "jest": "^23.0.6",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
-    "prettier": "^2.1.1",
+    "prettier": "^2.4.1",
     "standard-version": "^9.0.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^9.0.0",
@@ -85,9 +89,6 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "prettier": {
-    "singleQuote": true
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
