--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
   ],
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 2021
+    "ecmaVersion": 2021,
+    "requireConfigFile": false
   }
 }
