--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "@firecamp/curl-to-firecamp",
-  "version": "0.0.9",
+  "version": "0.0.0",
   "description": "Transform curl request to Firecamp request.",
   "main": "build/main/index.js",
-  "type": "module",
   "typings": "build/main/index.d.ts",
   "_module": "build/module/index.js",
   "repository": "https://github.com/firecamp-io/curl-to-firecamp",
   "license": "MIT",
   "keywords": [],
   "scripts": {
-    "build": "run-p build:*",
+    "build": "run-p build:* ",
     "build:main": "tsc -p tsconfig.json",
-    "_build:module": "tsc -p tsconfig.module.json",
+    "clean": "rimraf build/",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:lint": "eslint src --ext .ts --fix",
-    "test": "run-s build test:*",
+    "test": "yarn clean && yarn build && npx jest --bail --verbose --silent",
     "test:lint": "eslint src --ext .ts",
     "test:prettier": "prettier \"src/**/*.ts\" --list-different",
     "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
@@ -25,7 +24,7 @@
     "check-integration-tests": "run-s check-integration-test:*",
     "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
+    "watch:test": "nyc --silent jest --watch",
     "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
     "cov:html": "nyc report --reporter=html",
     "cov:lcov": "nyc report --reporter=lcov",
@@ -36,14 +35,13 @@
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
-    "reset-hard": "git clean -dfx && git reset --hard && yarn",
+    "reset-hard": "git clean -dfx && git reset --hard && npm i",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.17.1",
     "@firecamp/utility": "^0.1.115",
     "nano-id": "^1.1.0",
     "parse-curl": "https://github.com/firecamp-forks/parse-curl.js.git"
@@ -52,7 +50,6 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/jest": "^23.0.24",
     "@types/node": "^16.4.3",
-    "@types/url-parse": "1.4.4",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "codecov": "^3.5.0",
@@ -63,13 +60,12 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.5.2",
     "gh-pages": "^3.1.0",
-    "jest": "^23.0.6",
+    "jest": "^27.1.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
-    "prettier": "^2.4.1",
+    "prettier": "^2.1.1",
     "standard-version": "^9.0.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^9.0.0",
@@ -89,6 +85,9 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
