--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "types": ["node", "jest"],
     "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/lib/mitt.umd.js", "src/lib/__tests__/auth/basic.spec.ts"],
   "exclude": ["node_modules/**", "src/**/__tests__"],
   "compileOnSave": false
 }
