--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@firecamp/curl-to-firecamp",
+  "name": "@firecamp/curl-to-firecamp-v2",
   "version": "0.0.3",
   "description": "Transform curl request to Firecamp request.",
   "main": "build/main/index.js",
@@ -36,7 +36,8 @@
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
-    "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
+    "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
+    "pub": "npm publish --access='public'"
   },
   "engines": {
     "node": ">=10"
